[gd_scene load_steps=12 format=3 uid="uid://dfq5tfuscjx37"]

[ext_resource type="Script" path="res://Scenes/Stages/Stage5/Boss/boss_5.gd" id="1_i485s"]
[ext_resource type="PackedScene" uid="uid://cdqkj8qu45htr" path="res://Scenes/Stages/Stage5/Enemies/moon_5.tscn" id="2_jbeoq"]
[ext_resource type="Texture2D" uid="uid://dben1lbdrss7i" path="res://Assets/Stages/05/Boss/Boss5.png" id="3_4ntpw"]
[ext_resource type="PackedScene" uid="uid://d1qq0wscg418a" path="res://Scenes/Stages/Stage3/Boss/boss_3_fragment_1.tscn" id="3_uivnt"]
[ext_resource type="Texture2D" uid="uid://bu22uylk5n617" path="res://Assets/Misc/FireBlur.png" id="4_d2vle"]
[ext_resource type="PackedScene" uid="uid://pf1indebd80m" path="res://Scenes/Stages/Stage3/Boss/boss_3_fragment_2.tscn" id="4_ov4np"]
[ext_resource type="PackedScene" uid="uid://v3vqwg6rismg" path="res://Scenes/Stages/Stage3/Boss/boss_3_fragment_3.tscn" id="5_43ghm"]

[sub_resource type="CircleShape2D" id="CircleShape2D_pqiww"]
radius = 128.035

[sub_resource type="Animation" id="Animation_0s3ea"]
resource_name = "ShakeBoss"
length = 0.2
loop_mode = 1
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("BossSprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.05, 0.15),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(-10, 0), Vector2(10, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Hitbox:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.05, 0.15),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(-10, 0), Vector2(10, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_jkk38"]
_data = {
"ShakeBoss": SubResource("Animation_0s3ea")
}

[sub_resource type="Gradient" id="Gradient_ix86r"]
offsets = PackedFloat32Array(0, 0.0737327, 0.276498, 0.599078, 0.769585, 0.986175)
colors = PackedColorArray(1, 0.897324, 0.741695, 0, 1, 1, 1, 1, 0.99754, 0.654204, 3.85046e-07, 1, 0.965097, 0.291155, 0, 1, 0.984314, 0, 0, 1, 1, 0, 0, 0)

[node name="Boss5" type="StaticBody2D" groups=["Boss"]]
collision_layer = 33
collision_mask = 33
script = ExtResource("1_i485s")
moon5 = ExtResource("2_jbeoq")
fragment1 = ExtResource("3_uivnt")
fragment2 = ExtResource("4_ov4np")
fragment3 = ExtResource("5_43ghm")

[node name="BossSprite" type="Sprite2D" parent="."]
modulate = Color(1, 0.839216, 0.576471, 1)
scale = Vector2(0.4, 0.4)
texture = ExtResource("3_4ntpw")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource("CircleShape2D_pqiww")

[node name="Shaker" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_jkk38")
}

[node name="ShakeTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="DeleteTimer" type="Timer" parent="."]
one_shot = true

[node name="ShatteredParticles" type="CPUParticles2D" parent="."]
emitting = false
amount = 64
lifetime = 0.3
one_shot = true
explosiveness = 0.6
texture = ExtResource("4_d2vle")
spread = 180.0
gravity = Vector2(0, 0)
initial_velocity_min = 1000.0
initial_velocity_max = 1500.0
angle_max = 360.0
scale_amount_min = 0.2
scale_amount_max = 0.5
color_ramp = SubResource("Gradient_ix86r")

[node name="Hitbox" type="Area2D" parent="." groups=["BossHitbox"]]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
shape = SubResource("CircleShape2D_pqiww")

[connection signal="timeout" from="ShakeTimer" to="." method="_on_shake_timer_timeout"]
[connection signal="timeout" from="DeleteTimer" to="." method="_on_delete_timer_timeout"]
